[gd_scene load_steps=6 format=3 uid="uid://11g6x5q6adr1"]

[ext_resource type="Script" path="res://scenes/Inventory/scripts/InventoryPlayer.gd" id="1_21jac"]
[ext_resource type="Texture2D" uid="uid://coei6gpg5ev4v" path="res://scenes/Inventory/sprites/largeslot.png" id="2_87f8y"]
[ext_resource type="PackedScene" uid="uid://svl0nnm623jl" path="res://scenes/Inventory/ui/slot_smal/inv_ui_slot_smal.tscn" id="3_607bd"]
[ext_resource type="PackedScene" uid="uid://b8e7iux1mgs3d" path="res://scenes/Inventory/ui/slot_midle/inv_ui_slot_midl.tscn" id="4_6ygk8"]
[ext_resource type="PackedScene" uid="uid://bf0ibl024msbx" path="res://scenes/Inventory/ui/slot_large/inv_ui_slot_large.tscn" id="5_fhav5"]

[node name="InventoryPlayer" type="Control"]
z_index = 1
custom_minimum_size = Vector2(314, 234)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -838.0
offset_bottom = -414.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_21jac")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -117.0
offset_right = 314.0
offset_bottom = 117.0
grow_vertical = 2
texture = ExtResource("2_87f8y")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 241.0
offset_bottom = 219.0
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="NinePatchRect/HBoxContainer"]
custom_minimum_size = Vector2(100, 204)
layout_mode = 2

[node name="GridContainer1" type="GridContainer" parent="NinePatchRect/HBoxContainer/Control"]
custom_minimum_size = Vector2(100, 204)
layout_mode = 2
offset_right = 100.0
offset_bottom = 204.0
grow_vertical = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 2

[node name="inv_UI_slot_smal1" parent="NinePatchRect/HBoxContainer/Control/GridContainer1" instance=ExtResource("3_607bd")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="inv_UI_slot_smal2" parent="NinePatchRect/HBoxContainer/Control/GridContainer1" instance=ExtResource("3_607bd")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="inv_UI_slot_smal3" parent="NinePatchRect/HBoxContainer/Control/GridContainer1" instance=ExtResource("3_607bd")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="inv_UI_slot_smal4" parent="NinePatchRect/HBoxContainer/Control/GridContainer1" instance=ExtResource("3_607bd")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="inv_UI_slot_smal5" parent="NinePatchRect/HBoxContainer/Control/GridContainer1" instance=ExtResource("3_607bd")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="inv_UI_slot_smal6" parent="NinePatchRect/HBoxContainer/Control/GridContainer1" instance=ExtResource("3_607bd")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="inv_UI_slot_smal7" parent="NinePatchRect/HBoxContainer/Control/GridContainer1" instance=ExtResource("3_607bd")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="inv_UI_slot_smal8" parent="NinePatchRect/HBoxContainer/Control/GridContainer1" instance=ExtResource("3_607bd")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Control2" type="Control" parent="NinePatchRect/HBoxContainer"]
custom_minimum_size = Vector2(64, 204)
layout_mode = 2

[node name="GridContainer2" type="GridContainer" parent="NinePatchRect/HBoxContainer/Control2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/v_separation = 6

[node name="inv_UI_slot_midl" parent="NinePatchRect/HBoxContainer/Control2/GridContainer2" instance=ExtResource("4_6ygk8")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="inv_UI_slot_midl2" parent="NinePatchRect/HBoxContainer/Control2/GridContainer2" instance=ExtResource("4_6ygk8")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="inv_UI_slot_midl3" parent="NinePatchRect/HBoxContainer/Control2/GridContainer2" instance=ExtResource("4_6ygk8")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Control3" type="Control" parent="NinePatchRect/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="GridContainer3" type="GridContainer" parent="NinePatchRect/HBoxContainer/Control3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="inv_UI_slot_large" parent="NinePatchRect/HBoxContainer/Control3/GridContainer3" instance=ExtResource("5_fhav5")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="inv_UI_slot_large2" parent="NinePatchRect/HBoxContainer/Control3/GridContainer3" instance=ExtResource("5_fhav5")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
